@@ -15,6 +15,7 @@ Version 0.4c
  - The rest of the physical skills replaced
  - EnemySkills replaced: Scorpion, Orchid, Gol, Corishev
  - All seduction skills replaced
+ - Started to replace the magical skills
 * Kyna is locked to debug mode. I'll leave her where she is for now, but she's likely going to be removed at some point in the future.
 
 --------------------------------------------
